# sqlite-garu

./: .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: README.en.md
src/: lib.rs
tests/: fts5.rs  tokenizer.rs
